# pymailcheck

./: LICENSE  PythonFinalProject.py  README.md  README.rst  setup.cfg  setup.py
pymailcheck/: __init__.py
tests/: test_pymailcheck.py
