[metadata]
name = pymailcheck
version = 1.1.0
author = Dylan Barlett
author_email = dylan.barlett@gmail.com
description = Suggest corrections to user-misspelled email addresses
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/mailcheck/pymailcheck/
keywords = email, mailcheck
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Communications :: Email

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
